vlib/v/checker/tests/const_match_type_mismatch_range_err.out
vlib/v/checker/tests/const_match_type_mismatch_range_err.vv:5:2: error: only numeric and char typed const are allowed for ranges
    3 | 
    4 | match 5 {
    5 |     start...end {
      |     ~~~~~
    6 |         println(start)
    7 |     }
