vlib/v/checker/tests/const_match_type_mismatch_range_err.vv
const end = 10
const start = 'str'

match 5 {
	start...end {
		println(start)
	}
	else {}
}